export const snapshot = {};

snapshot[`Load the pages of a site 1`] = `9`;

snapshot[`Load the pages of a site 2`] = `
{
  formats: [
    {
      includesPath: undefined,
      key: ".tmpl.ts",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.js",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.json",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".json",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".md",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".js",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".ts",
      pageType: undefined,
    },
    {
      includesPath: "_includes",
      key: ".njk",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yaml",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yml",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".png",
      pageType: "asset",
    },
    {
      includesPath: undefined,
      key: ".css",
      pageType: "asset",
    },
  ],
}
`;

snapshot[`Load the pages of a site 3`] = `
[
  {
    dest: "/static.yml",
    saved: true,
    src: "/static.yml",
  },
]
`;

snapshot[`Load the pages of a site 4`] = `
{
  content: "Uint8Array(1503)",
  data: {
    content: "Uint8Array(1503)",
    imagick: [
      {
        resize: [
          400,
          300,
        ],
        suffix: "-small",
      },
    ],
    mergedKeys: {
      imagick: "array",
      metas: "object",
      tags: "stringArray",
    },
    metas: {
      description: "Default description",
      title: "Default title",
    },
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    site: "Default site name",
    tags: [
      "pages",
    ],
    url: "/favicon.png",
  },
  dest: {
    ext: ".png",
    path: "/favicon",
  },
  src: {
    ext: ".png",
    path: "/favicon",
  },
}
`;

snapshot[`Load the pages of a site 5`] = `
{
  content: "Content of Page 5",
  data: {
    content: "Content of Page 5",
    date: 1970-01-01T00:00:00.000Z,
    imagick: [
      {
        resize: [
          400,
          300,
        ],
        suffix: "-small",
      },
    ],
    mergedKeys: {
      imagick: "array",
      metas: "object",
      tags: "stringArray",
    },
    metas: {
      description: "Default description",
      title: "Default title",
    },
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    site: "Default site name",
    tags: [
      "pages",
    ],
    title: "Page 5",
    url: "/page5/",
  },
  dest: {
    ext: ".html",
    path: "/page5/index",
  },
  src: {
    ext: ".yaml",
    path: "/page5",
  },
}
`;

snapshot[`Load the pages of a site 6`] = `
{
  content: "<p>Content of Page 1</p>
",
  data: {
    colors: [
      "#ff0000",
      "#0000ff",
      "#00ff00",
    ],
    content: "
Content of Page 1
",
    date: 1970-01-01T00:00:00.000Z,
    documents: [
      {
        title: "Document 1",
      },
      {
        title: "Document 2",
      },
      {
        title: "Document 3",
      },
    ],
    draft: true,
    drinks: {
      alcoholic: [
        "gin-tonic",
        "gin-soda",
      ],
      others: [
        "coffee",
        "tea",
      ],
    },
    imagick: [
      {
        resize: [
          400,
          300,
        ],
        suffix: "-small",
      },
      {
        resize: [
          900,
          900,
        ],
        suffix: "-big",
      },
    ],
    mergedKeys: {
      imagick: "array",
      metas: "object",
      tags: "stringArray",
    },
    metas: {
      description: "Default description",
      title: "Custom title",
    },
    names: [
      "Oscar",
      "Laura",
    ],
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    site: "Folder overrided site name",
    tags: [
      "pages",
      "sub-pages",
      "page1",
    ],
    title: "Page 1",
    url: "/pages/page1/",
  },
  dest: {
    ext: ".html",
    path: "/pages/page1/index",
  },
  src: {
    ext: ".md",
    path: "/pages/1_page1",
  },
}
`;

snapshot[`Load the pages of a site 7`] = `
{
  content: "Content of Page 2",
  data: {
    colors: [
      "#ff0000",
      "#0000ff",
      "#00ff00",
    ],
    content: "Content of Page 2",
    date: 1970-01-01T00:00:00.000Z,
    documents: [
      {
        title: "Document 1",
      },
      {
        title: "Document 2",
      },
      {
        title: "Document 3",
      },
    ],
    drinks: {
      alcoholic: [
        "gin-tonic",
        "gin-soda",
      ],
      others: [
        "coffee",
        "tea",
      ],
    },
    imagick: [
      {
        resize: [
          400,
          300,
        ],
        suffix: "-small",
      },
    ],
    mergedKeys: {
      imagick: "array",
      metas: "object",
      tags: "stringArray",
    },
    metas: {
      description: "Default description",
      title: "Default title",
    },
    names: [
      "Oscar",
      "Laura",
    ],
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    site: "Folder overrided site name",
    tags: [
      "pages",
      "sub-pages",
    ],
    title: "Page 2",
    url: "/overrided-page2/",
  },
  dest: {
    ext: ".html",
    path: "/overrided-page2/index",
  },
  src: {
    ext: ".tmpl.json",
    path: "/pages/2020-06-21_page2",
  },
}
`;

snapshot[`Load the pages of a site 8`] = `
{
  content: "Content of Page 4 in Overrided site name",
  data: {
    colors: [
      "#ff0000",
      "#0000ff",
      "#00ff00",
    ],
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    documents: [
      {
        title: "Document 1",
      },
      {
        title: "Document 2",
      },
      {
        title: "Document 3",
      },
    ],
    drinks: {
      alcoholic: [
        "gin-tonic",
        "gin-soda",
      ],
      others: [
        "coffee",
        "tea",
      ],
    },
    imagick: [
      {
        resize: [
          400,
          300,
        ],
        suffix: "-small",
      },
    ],
    mergedKeys: {
      imagick: "array",
      metas: "object",
      tags: "stringArray",
    },
    metas: {
      description: "Default description",
      title: "Default title",
    },
    names: [
      "Oscar",
      "Laura",
    ],
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    site: "Overrided site name",
    tags: [
      "pages",
      "sub-pages",
    ],
    title: "Page 4",
    url: "/pages/page4/",
  },
  dest: {
    ext: ".html",
    path: "/pages/page4/index",
  },
  src: {
    ext: ".tmpl.ts",
    path: "/pages/2021-01-02-18-32_page4",
  },
}
`;

snapshot[`Load the pages of a site 9`] = `
{
  content: "<p>Content of Page 6</p>
",
  data: {
    colors: [
      "#ff0000",
      "#0000ff",
      "#00ff00",
    ],
    content: "
Content of Page 6
",
    date: 1970-01-01T00:00:00.000Z,
    documents: [
      {
        title: "Document 1",
      },
      {
        title: "Document 2",
      },
      {
        title: "Document 3",
      },
    ],
    drinks: {
      alcoholic: [
        "gin-tonic",
        "gin-soda",
      ],
      others: [
        "coffee",
        "tea",
      ],
    },
    imagick: [
      {
        resize: [
          400,
          300,
        ],
        suffix: "-small",
      },
    ],
    mergedKeys: {
      imagick: "array",
      metas: "object",
      tags: "stringArray",
    },
    metas: {
      description: "Default description",
      title: "Default title",
    },
    names: [
      "Oscar",
      "Laura",
    ],
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    site: "Folder overrided site name",
    tags: [
      "pages",
      "sub-pages",
      "page6",
    ],
    title: "Page 6",
    url: "/pages/page6/",
  },
  dest: {
    ext: ".html",
    path: "/pages/page6/index",
  },
  src: {
    ext: ".md",
    path: "/pages/2021-12-29_page6",
  },
}
`;

snapshot[`Load the pages of a site 10`] = `
{
  content: "Content of Page 3",
  data: {
    colors: [
      "#ff0000",
      "#0000ff",
      "#00ff00",
    ],
    content: "Content of Page 3",
    date: 1970-01-01T00:00:00.000Z,
    documents: [
      {
        title: "Document 1",
      },
      {
        title: "Document 2",
      },
      {
        title: "Document 3",
      },
    ],
    drinks: {
      alcoholic: [
        "gin-tonic",
        "gin-soda",
      ],
      others: [
        "coffee",
        "tea",
      ],
    },
    imagick: [
      {
        resize: [
          400,
          300,
        ],
        suffix: "-small",
      },
    ],
    mergedKeys: {
      imagick: "array",
      metas: "object",
      tags: "stringArray",
    },
    metas: {
      description: "Default description",
      title: "Default title",
    },
    names: [
      "Oscar",
      "Laura",
    ],
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    site: "Folder overrided site name",
    tags: [
      "pages",
      "sub-pages",
    ],
    title: "Page 3",
    url: "/page_3",
  },
  dest: {
    ext: "",
    path: "/page_3",
  },
  src: {
    ext: ".tmpl.js",
    path: "/pages/page3",
  },
}
`;

snapshot[`Load the pages of a site 11`] = `
{
  content: "Content of Page 7",
  data: {
    colors: [
      "#ff0000",
      "#0000ff",
      "#00ff00",
    ],
    content: "Content of Page 7",
    date: 1970-01-01T00:00:00.000Z,
    documents: [
      {
        title: "Document 1",
      },
      {
        title: "Document 2",
      },
      {
        title: "Document 3",
      },
    ],
    drinks: {
      alcoholic: [
        "gin-tonic",
        "gin-soda",
      ],
      others: [
        "coffee",
        "tea",
      ],
    },
    imagick: [
      {
        resize: [
          400,
          300,
        ],
        suffix: "-small",
      },
    ],
    mergedKeys: {
      imagick: "array",
      metas: "object",
      tags: "stringArray",
    },
    metas: {
      description: "Default description",
      title: "Default title",
    },
    names: [
      "Oscar",
      "Laura",
    ],
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    site: "Folder overrided site name",
    tags: [
      "pages",
      "sub-pages",
      "sub-sub-pages",
      "page7",
    ],
    title: "Page 7",
    url: "/pages/subpage/page7/",
  },
  dest: {
    ext: ".html",
    path: "/pages/subpage/page7/index",
  },
  src: {
    ext: ".tmpl.js",
    path: "/pages/subpage/page7",
  },
}
`;

snapshot[`Load the pages of a site 12`] = `
{
  content: "body {
  font-family: sans-serif;
  color: black;
}
",
  data: {
    content: "body {
  font-family: sans-serif;
  color: black;
}
",
    imagick: [
      {
        resize: [
          400,
          300,
        ],
        suffix: "-small",
      },
    ],
    mergedKeys: {
      imagick: "array",
      metas: "object",
      tags: "stringArray",
    },
    metas: {
      description: "Default description",
      title: "Default title",
    },
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    site: "Default site name",
    tags: [
      "pages",
    ],
    url: "/styles.css",
  },
  dest: {
    ext: ".css",
    path: "/styles",
  },
  src: {
    ext: ".css",
    path: "/styles",
  },
}
`;
